[tool.poetry]
name = "ansible-tower-mock"
version = "0.1.0"
description = "A simple script to mock launching ansible-tower job templates"
authors = ["Meesha <44530786+meesha7@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
ansible = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
